--- a/index.html
+++ b/index.html
@@ -75,12 +75,27 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="https://via.placeholder.com/150x50" class="d-block w-100" alt="...">
+                    <div class="black-overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Emile GARDENT</h5>
+                        <p>Etudiant - BTS SIO option SLAM</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://via.placeholder.com/150x250" class="d-block w-100" alt="...">
+                    <img src="https://via.placeholder.com/150x50" class="d-block w-100" alt="...">
+                    <div class="black-overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Emile GARDENT</h5>
+                        <p>Etudiant - BTS SIO option SLAM</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://via.placeholder.com/150x250" class="d-block w-100" alt="...">
+                    <img src="https://via.placeholder.com/150x50" class="d-block w-100" alt="...">
+                    <div class="black-overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Emile GARDENT</h5>
+                        <p>Etudiant - BTS SIO option SLAM</p>
+                    </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
