--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
     <!-- END OF TOPNAV -->
     <!-- SIDENAV-->
     <nav class="sidenav nav flex-column bg-dark">
-        <a class="nav-link active" href="#">Active</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <div class="f-bot">
+            <li><a href=""><i class="fab fa-linkedin"></a></i></li>
+            <li><a href=""><i class="fab fa-github-square"></a></i></li>
+            <li><a href=""><i class="fab fa-twitter-square"></a></i></li>
+            <li><a href=""><i class="fas fa-envelope-square"></a></i></li>
+        </div>
     </nav>
     <!-- END OF SIDENAV -->
     <!-- MAIN CONTENT-->
@@ -107,7 +109,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="card mb-3 mt-4" style="max-width: 540px;" id="top">
+        <div class="card mb-3 mt-4" id="top">
             <div class="row no-gutters">
                 <div class="col-md-4">
                     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
