Edited : index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- TOPNAV -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Emile GARDENT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,10 +59,10 @@
     <!-- SIDENAV-->
     <nav class="sidenav nav flex-column bg-dark">
         <div class="f-bot">
-            <li><a href=""><i class="fab fa-linkedin"></a></i></li>
-            <li><a href=""><i class="fab fa-github-square"></a></i></li>
-            <li><a href=""><i class="fab fa-twitter-square"></a></i></li>
-            <li><a href=""><i class="fas fa-envelope-square"></a></i></li>
+            <li><a href="https://www.linkedin.com/in/emile-gardent-57099a170/" class="text-light"><i class="fab fa-linkedin"></a></i></li>
+            <li><a href="https://github.com/Emile-G" class="text-light"><i class="fab fa-github-square"></a></i></li>
+            <li><a href="https://twitter.com/EmileGardent" class="text-light"><i class="fab fa-twitter-square"></a></i></li>
+            <li><a href="mailto:egardent.pro@gmail.com" class="text-light"><i class="fas fa-envelope-square"></a></i></li>
         </div>
     </nav>
     <!-- END OF SIDENAV -->
@@ -119,7 +119,7 @@
                         <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 border">
                     <div class="tab-content" id="v-pills-tabContent">
                         <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">...</div>
                         <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
