--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- TOPNAV -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-gradient">
-        <a class="navbar-brand side" href="#">Emile GARDENT</a>
+        <a class="navbar-brand side" href="#"><span class="brand">Emile GARDENT</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
