Changes to be committed: 	modified:   article.html 	modified:   articles/docker.html 	modified:   articles/laravel.html 	modified:   articles/symfony.html 	modified:   index.html 	deleted:    src/images/articles/symfony/post-bg.jpg 	new file:   src/images/articles/symfony/symfony_bg.jpg 	modified:   veilles/juridiques/index.html 	modified:   veilles/technologiques/index.html

--- a/veilles/juridiques/index.html
+++ b/veilles/juridiques/index.html
@@ -56,8 +56,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn-group mr-2" role="group" aria-label="Second group">
-                    <a href="/CV-EmileG.pdf"><button type="button" class="btn green green-button rounded-0">CV</button></a>
+                    <div class="btn-group mr-2" role="group" aria-label="Second group">
+                    <a href="/cv.html"><button type="button" class="btn green green-button rounded-0">CV</button></a>
                 </div>
               </div>
         </div>
