--- a/veilles/technologiques/index.html
+++ b/veilles/technologiques/index.html
@@ -56,8 +56,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn-group mr-2" role="group" aria-label="Second group">
-                    <a href="/CV-EmileG.pdf"><button type="button" class="btn green green-button rounded-0">CV</button></a>
+                    <div class="btn-group mr-2" role="group" aria-label="Second group">
+                    <a href="/cv.html"><button type="button" class="btn green green-button rounded-0">CV</button></a>
                 </div>
               </div>
         </div>
