--- a/cv.html
+++ b/cv.html
@@ -1,31 +1,35 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Fonts -->
-        <link href="https://fonts.google.com/download?family=Ubuntu" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/058ba3cd65.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="/src/css/index.css">
-        <link rel="stylesheet" href="/src/css/timeline.css">
+    <!-- Fonts -->
+    <link href="https://fonts.google.com/download?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/058ba3cd65.js" crossorigin="anonymous"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="/src/css/index.css">
+    <link rel="stylesheet" href="/src/css/timeline.css">
 
 
-        <title>Emile GARDENT - Portfolio</title>
-        <link rel="icon" type="image/png" href="/src/images/favicon/favicon.ico">
-    </head>
+    <title>Emile GARDENT - Portfolio</title>
+    <link rel="icon" type="image/png" href="/src/images/favicon/favicon.ico">
+</head>
+
 <body>
-     <!-- TOPNAV -->
-     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-gradient">
+    <!-- TOPNAV -->
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-gradient">
         <a class="navbar-brand side" href="/"><span class="brand">Emile GARDENT</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -37,17 +41,26 @@
                     <a class="nav-link text-light btn-green" href="/#etudes"><span class="green">02 </span>Études</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light btn-green" href="/#experiences_pro"><span class="green">03 </span>Expériences professionnelles</a>
+                    <a class="nav-link text-light btn-green" href="/#experiences_pro"><span class="green">03
+                        </span>Expériences professionnelles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light btn-green" href="/#mes_projets"><span class="green">04 </span>Projets</a>
+                    <a class="nav-link text-light btn-green" href="/#mes_projets"><span class="green">04
+                        </span>Projets</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light btn-green" href="/#me_contacter"><span class="green">05
+                        </span>Me contacter</a>
                 </li>
             </ul>
             <div class="btn-toolbar toolbar-navbar-separatif" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
                     <div class="btn-group">
-                        <a href="/article.html"><button type="button" class="btn green green-button rounded-0">Articles</button></a>
-                        <button type="button" class="btn dropdown-toggle dropdown-toggle-split green green-button rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a href="/article.html"><button type="button"
+                                class="btn green green-button rounded-0">Articles</button></a>
+                        <button type="button"
+                            class="btn dropdown-toggle dropdown-toggle-split green green-button rounded-0"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="sr-only">DropDown</span>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right rounded-0">
@@ -59,32 +72,43 @@
                 <div class="btn-group mr-2" role="group" aria-label="Second group">
                     <a href="/cv.html"><button type="button" class="btn green green-button rounded-0">CV</button></a>
                 </div>
-              </div>
+            </div>
         </div>
     </nav>
     <!-- END OF TOPNAV -->
     <!-- SIDENAV-->
     <nav class="sidenav nav flex-column bg-sidenav">
         <div class="f-bot">
-            <li><a href="https://www.linkedin.com/in/emile-gardent-57099a170/" class="sidenav-button"><i class="fab fa-linkedin"></a></i></li>
-            <li><a href="https://github.com/Emile-G" class="sidenav-button"><i class="fab fa-github-square"></a></i></li>
-            <li><a href="https://twitter.com/EmileGardent" class="sidenav-button"><i class="fab fa-twitter-square"></a></i></li>
-            <li><a href="mailto:egardent.pro@gmail.com" class="sidenav-button"><i class="fas fa-envelope-square"></a></i></li>
+            <li><a href="https://www.linkedin.com/in/emile-gardent-57099a170/" class="sidenav-button"><i
+                        class="fab fa-linkedin"></a></i></li>
+            <li><a href="https://github.com/Emile-G" class="sidenav-button"><i class="fab fa-github-square"></a></i>
+            </li>
+            <li><a href="https://twitter.com/EmileGardent" class="sidenav-button"><i
+                        class="fab fa-twitter-square"></a></i></li>
+            <li><a href="mailto:egardent.pro@gmail.com" class="sidenav-button"><i
+                        class="fas fa-envelope-square"></a></i></li>
         </div>
     </nav>
     <!-- END OF SIDENAV -->
     <!-- MAIN CONTENT-->
     <embed src="/CV-EmileG.pdf" type="application/pdf" class="responsive cv-fillup d-flex w-100">
     <a href="/CV-EmileG.pdf" class="btn btn-green rounded-0 bg-dark w-100" download="/CV-EmileG.pdf">Télécharger</a>
-<!-- END OF MAIN-->
+    <!-- END OF MAIN-->
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<!--Custom scripts-->
-<script>
-</script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <!--Custom scripts-->
+    <script>
+    </script>
 </body>
+
 </html>
