Changes to be committed: 	modified:   index.html 	new file:   src/images/united-kingdom.png 	modified:   src/php/contacter.php

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                         class="fab fa-twitter-square"></a></i></li>
             <li><a href="mailto:egardent.pro@gmail.com" class="sidenav-button"><i
                         class="fas fa-envelope-square"></a></i></li>
+            <li><a href="https://english.egardent.fr/" class="sidenav-button"><img src="/src/images/united-kingdom.png"/></li>
         </div>
     </nav>
     <!-- END OF SIDENAV -->
