Changes to be committed: 	modified:   CV-EmileG.pdf 	modified:   index.html 	renamed:    src/images/photoCV2.png -> src/images/OLD-photoCV2.png 	new file:   src/images/photoCV2.jpg

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         class="fab fa-twitter-square"></a></i></li>
             <li><a href="mailto:egardent.pro@gmail.com" class="sidenav-button"><i
                         class="fas fa-envelope-square"></a></i></li>
-            <li><a href="https://english.egardent.fr/" class="sidenav-button"><img src="/src/images/united-kingdom.png"/></li>
+            <!--<li><a href="https://english.egardent.fr/" class="sidenav-button"><img src="/src/images/united-kingdom.png"/></li>-->
         </div>
     </nav>
     <!-- END OF SIDENAV -->
@@ -140,13 +140,13 @@
                 <div class="card-header" id="propos">À Propos</div>
                 <div class="row no-gutters">
                     <div class="col-md-2">
-                        <img src="/src/images/photoCV2.png" class="card-img img-top img-left" alt="...">
+                        <img src="/src/images/photoCV2.jpg" class="card-img img-top img-left" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body">
                             <p class="card-text">
                                 <hr>
-                            <p>Je m'appelle Émile GARDENT, j'ai 19 ans. Je suis actuellement un étudiant en BTS SIO
+                            <p>Je m'appelle Émile GARDENT, j'ai 19 ans. Je suis détenteur d'un BTS SIO
                                 option SLAM, et je suis à la recherche d'une alternance.</p>
                             <p>Passionné de nouvelles technologies, je suis un développeur orienté back-end, avec une
                                 envie d'évoluer vers des compétences de DevOps et d'ingénierie système.</p>
@@ -194,7 +194,7 @@
                             </div>
                             <div class="tab-pane fade" id="v-pills-BTS" role="tabpanel"
                                 aria-labelledby="v-pills-BTS-tab">
-                                <p class="text-etude text-etude-top"> 2018 - 2020</p>
+                                <p class="text-etude text-etude-top"> Année d'optemtion :  2020</p>
                                 <p class="text-etude"> Lycée Charles de Foucauld </p>
                                 <p class="text-etude"> 32 Rue de Quimper, 29200 Brest </p>
                                 <p class="text-etude"><a
