Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <div class="tab-content" id="v-pills-tabContent">
                             <div class="tab-pane fade show active" id="v-pills-lycee" role="tabpanel"
                                 aria-labelledby="v-pills-lycee-tab">
-                                <p class="text-etude text-etude-top"> Année d'optemtion : 2018</p>
+                                <p class="text-etude text-etude-top"> Année d'obtention : 2018</p>
                                 <p class="text-etude"> Lycée Chaptal </p>
                                 <p class="text-etude"> 6 Allée Chaptal, 22000 Saint-Brieuc </p>
                                 <p class="text-etude"><a
@@ -194,7 +194,7 @@
                             </div>
                             <div class="tab-pane fade" id="v-pills-BTS" role="tabpanel"
                                 aria-labelledby="v-pills-BTS-tab">
-                                <p class="text-etude text-etude-top"> Année d'optemtion :  2020</p>
+                                <p class="text-etude text-etude-top"> Année d'obtention :  2020</p>
                                 <p class="text-etude"> Lycée Charles de Foucauld </p>
                                 <p class="text-etude"> 32 Rue de Quimper, 29200 Brest </p>
                                 <p class="text-etude"><a
@@ -317,7 +317,7 @@
                                             Iteration du projet "Mesguen" léger en client lourd. Basé sur du code VB.Net
                                             et une base de donnée Oracle. C'est une application qui a pour but de gérer
                                             les différentes tournées de l'entreprise "Mesguen". (Projet en aucun cas lié
-                                            à l'entrprise "Mesguen" et tout nom affilié à Mesguen).
+                                            à l'entreprise "Mesguen" et tout nom affilié à Mesguen).
                                         </p>
                                     </div>
                                 </a>
