--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
                 <div class="card-header" id="propos">À Propos</div>
                 <div class="row no-gutters">
                     <div class="col-md-2">
-                        <img src="/src/images/photoCV2.jpg" class="card-img img-top img-left" alt="...">
+                        <img src="/src/images/photoCV2.jpg" class="card-img img-top img-left img-cv" alt="ma photo">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body">
                             <p class="card-text">
                                 <hr>
-                            <p>Je m'appelle Émile GARDENT, j'ai 19 ans. Je suis détenteur d'un BTS SIO
-                                option SLAM, et je suis à la recherche d'une alternance.</p>
+                            <p>Je m'appelle Émile GARDENT, j'ai 19 ans. Je suis un jeune diplomé d'un BTS SIO
+                                option SLAM à la recherche d'un travail !</p>
                             <p>Passionné de nouvelles technologies, je suis un développeur orienté back-end, avec une
                                 envie d'évoluer vers des compétences de DevOps et d'ingénierie système.</p>
                             <hr>
