--- a/index.html
+++ b/index.html
@@ -399,12 +399,13 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
+        <!-- DarkMode-->
+        <script src="/src/js/dark-mode-switch.min.js"></script>
+        <!--Custom scripts-->
         <script>
         </script>
 
 
-    <!-- You must load 'dark-mode-switch.js' at the foot of the page -->
-    <script src="src/js/dark-mode-switch.min.js"></script>
 </body>
 
 </html>
